# ros2_hip_exoskeleton_control

./: .gitignore  README.md  bbuild.sh  cbuild.sh  start_both.sh  start_left.sh  start_right.sh
src/epos4_bringup/: CMakeLists.txt  package.xml
src/epos4_bringup/config/can0/: bus.yml  epos4.dcf
src/epos4_bringup/config/can1/: bus.yml
src/epos4_bringup/launch/: can.launch.py  can0.launch.py  can1.launch.py  position_control.launch.py
src/epos4_gait_manager/: package.xml  setup.cfg  setup.py
src/epos4_gait_manager/epos4_gait_manager/: epos4_gait_manager.py
src/epos4_gait_parameter_prediction_node/: package.xml  setup.cfg  setup.py
src/epos4_gait_parameter_prediction_node/epos4_gait_parameter_prediction_node/: epos4_gait_parameter_prediction_node.py
src/epos4_gait_parameter_prediction_node/epos4_gait_parameter_prediction_node/data/: 400_lstm_hyper.pkl  700_data_pca.pkl
src/epos4_gait_parameter_prediction_node/epos4_gait_parameter_prediction_node/lstm_models/: LSTM_SD.pth  LSTM_SH.pth  LSTM_SV.pth
src/epos4_interfaces/: CMakeLists.txt  package.xml
src/epos4_interfaces/msg/: GaitFlag.msg
src/epos4_node_position_controller_left/: package.xml  setup.cfg  setup.py
src/epos4_node_position_controller_left/epos4_node_position_controller_left/: epos4_controller_left.py
src/epos4_node_position_controller_left/msg/: GaitParams.msg
src/epos4_node_position_controller_right/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/epos4_node_position_controller_right/epos4_node_position_controller_right/: epos4_controller_right.py
