<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epos4_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marek@todo.todo">marek</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>canopen_core</depend>
  <depend>canopen_proxy_driver</depend>
  <depend>canopen_interfaces</depend>
  <depend>lely_core_libraries</depend>
  <depend>canopen_402_driver</depend>
  <depend>canopen_master_driver</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
